main_2.tf
provider "aws" {
    region = "ap-northeast-2"
}

resource "aws_instance" "web" {
    ami = data.aws_ami.ubuntu.image_id
    instance_type = "t2.micro"

    tags = {
        Name = "gooode-ubuntu"
    }
}
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}
